[IMP] Fix group-collapse and group-expand selectors to use them in listgrid groupbys

--- a/addons/openerp/static/css/style.css
+++ b/addons/openerp/static/css/style.css
@@ -135,31 +135,24 @@ div.active_filter {
 	padding: 1px;
 }
 
-div.group-expand {
-	cursor: pointer;
-	background: url(../images/treegrid/expand.gif) no-repeat top left;
-	padding-left: 15px;
+.group-expand {
+    cursor: pointer;
+    background: url(../images/treegrid/expand.gif) no-repeat left center;
+    padding-left: 15px;
 }
 
-div.group-expand:hover {
-	cursor: pointer;
-	background: url(../images/treegrid/expandh.gif) no-repeat top left;
-	padding-left: 15px;
-	padding-left: 15px;
+.group-expand:hover {
+    background-image: url(../images/treegrid/expandh.gif);
 }
 
-div.group-collapse {
-	cursor: pointer;
-	background: url(../images/treegrid/collapse.gif) no-repeat top left;
-	padding-left: 15px;
-	padding-left: 15px;
+.group-collapse {
+    cursor: pointer;
+    background: url(../images/treegrid/collapse.gif) no-repeat left center;
+    padding-left: 15px;
 }
 
-div.group-collapse:hover {
-	cursor: pointer;
-	background: url(../images/treegrid/collapseh.gif) no-repeat top left;
-	padding-left: 15px;
-	padding-left: 15px;
+.group-collapse:hover {
+    background-image: url(../images/treegrid/collapseh.gif);
 }
 
 /* ============== SEARCH FORM end ==============*/
